# SecondBrainRAG

./: 2026-05-03-96jN2OCOfLs.md  2026-05-03-u6R8no74vzg.md  Dockerfile  MCP_SETUP.md  README.md  docker-compose.yaml  mcp_config.json  progress.md  projectPRD.md  pyproject.toml  run_mcp.bat  test_langfuse.py
.github/workflows/: deploy-pages.yml
chrome-extension/: background.js  index.html  manifest.json  package-lock.json  package.json  sidepanel.css  sidepanel.html  sidepanel.js  tsconfig.json  vite.config.ts
chrome-extension/src/: App.tsx  globals.css
chrome-extension/src/components/ui/: ai-prompt-box.tsx  background-paper-shaders.tsx
config/: airflow.cfg
dags/: obsidian_sync.py
docs/learning/: ingest_pipeline_concepts.md  initial_setup_concepts.md  storage_layer_concepts.md  understanding.md
landing-page/: index.html  setup.html
scripts/: ingest_vault.py  init-postgres.sql  seed_mock_data.py  telegram_bot.py  verify_setup.py
src/: config.py  main.py  mcp_server.py
src/db/: opensearch.py  postgres.py
src/ingest/: universal_ingest.py  yt_fetcher.py
src/obsidian/: __init__.py  linker.py
src/rag/: chunker.py  embedder.py  generator.py  retriever.py
src/routers/: ask.py  health.py  ingest.py
