[project]
name = "prodrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "langchain-text-splitters>=1.1.2",
    "langfuse>=2.54.0,<3.0.0",
    "mcp>=1.27.1",
    "opensearch-py>=3.2.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.7.1",
    "pymupdf>=1.27.2.3",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.7",
    "trafilatura>=2.0.0",
    "uvicorn>=0.46.0",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.3.17",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
